# RTX-OOM-Guard

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  RESULTS.md  ROADMAP.md  SECURITY.md  TECHNICAL_REPORT.md  benchmarks.md  provenance.json  pyproject.toml  run.py  run_benchmark.py  sarif_output.json  sbom.json  smoke_test.sh  verify.py
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
benchmarks/: __init__.py  compare.py  evaluate.py  model_fragmentation.py  oom_bench.py  plot_results.py  run_baseline.py  run_local_benchmark.py  run_with_defrag.py  serious_evaluate.py  unified_benchmark.py
configs/: config.yaml
dashboard/: README.md
dashboard/src/: App.jsx
docs/: HONEST_ASSESSMENT.md  design.md
examples/: train_toy_model.py
notebooks/: Exploratory_Analysis.ipynb  colab_t4_validation.ipynb
results/: benchmark_infra_results.json  benchmark_infra_summary.csv  comparison.json  defrag.json  report_summary.json
scripts/: business_ml_pipeline.py  collect_real_traces.py  enterprise_hub_telemetry.py  generate_large_dataset.py  generate_sample_traces.py  generate_senior_dataset.py  live_demo.py  stress_test.py  train_ddp.py  train_senior_predictor.py  workload_simulator.py
src/rtx_oom_guard/: __init__.py  api.py  (+7 more)
tests/: conftest.py  test_100pct_coverage.py  test_allocator_logger_final.py  test_api.py  test_api_hardened.py  test_api_hardened_expansion.py  test_auto_instrument.py  test_callback_hardened.py  test_cli.py  test_cli_coverage.py  test_cli_deep.py  test_cli_full.py  test_cli_hardened.py  test_collector.py  test_collector_hardened.py  test_compactor.py  test_compactor_hardened.py  test_coverage_final.py  test_dashboard_hardened.py  test_dashboard_manager.py  test_dataset.py  test_dataset_final.py  test_ddp_hardened.py  test_defragmenter.py  test_defragmenter_final.py  test_defragmenter_mocked.py  test_fixes.py  test_hook.py  test_kernels.py  test_kernels_body.py  test_kv_cache.py  test_kv_cache_final.py  test_logger.py  test_models.py  test_monitor.py  test_monitor_deep.py  test_monitor_final.py  test_monitor_hardened.py  test_policy.py  test_policy_final.py  (+5 more)
(+29 files in other folders)
