[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rtx-oom-guard"
version = "2.0.0"
description = "NVIDIA-Grade Predictive GPU Memory Defragmenter — Transformer-driven proactive CUDA memory infrastructure"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "RTX-OOM-Guard Infrastructure Team"}
]
keywords = ["gpu", "cuda", "memory", "defragmentation", "pytorch", "transformer", "observability"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "pyarrow>=12.0",
    "matplotlib>=3.7",
    "scikit-learn>=1.3",
    "pyyaml>=6.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0",
    "structlog>=23.1.0",
    "prometheus-client>=0.17.0",
    "mlflow>=2.4.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov", "black", "ruff", "mypy", "flake8"]
models = ["torchvision>=0.15", "transformers>=4.30"]
profiler = ["torch-tb-profiler>=0.4"]
triton = ["triton>=2.1.0"]
rich = ["rich>=13.0"]
all = ["rtx-oom-guard[dev,models,profiler,triton,rich]"]

[project.scripts]
rtx-oom-guard = "rtx_oom_guard.cli:main"
rtx-collect = "rtx_oom_guard.cli:collect_cmd"
rtx-train = "rtx_oom_guard.cli:train_cmd"
rtx-benchmark = "rtx_oom_guard.cli:benchmark_cmd"
rtx-serve = "rtx_oom_guard.cli:serve_cmd"
rtx-dashboard = "rtx_oom_guard.cli:dashboard_cmd"

[tool.setuptools.packages.find]
where = ["src"]
include = ["rtx_oom_guard*"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --cov=rtx_oom_guard --cov-report=term-missing --cov-fail-under=95"
pythonpath = ["src"]
